# modorganizer-game_features

./: CMakeLists.txt
include/gamefeatures/: bsainvalidation.h  gameplugins.h  localsavegames.h  scriptextender.h
src/: gamefeatures.cpp
